--- a/resources/index.html
+++ b/resources/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>TEST</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>TEST</h1>
+        <h1></h1>
     </body>
+
+    <script src="script.js"></script>
 </html>
