--- a/resources/index.html
+++ b/resources/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>TEST</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1></h1>
-    </body>
 
-    <script src="script.js"></script>
+<head>
+    <title>HttpServer</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="header">
+        <h2><a href="https://github.com/MainKronos" target="_blank" rel="noopener noreferrer">MainKronos</a></h2>
+        <div class="mid-spot" onclick="document.body.classList.toggle('gold');"></div>
+        <button class="contact-btn" onclick="window.open('https://github.com/MainKronos/HttpServer', '_blank');">
+            <span class="glow"></span>
+            <span class="contact-btn-content">Source</span>
+        </button>
+
+        <div class="spotlight">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+
+    <canvas id="particleCanvas"></canvas>
+
+    <div class="accent-lines">
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <div class="heroSubP">
+        <p>Introducing</p>
+    </div>
+    <div class="hero">
+        <div class="heroT">
+            <h2>HttpServer</h2>
+            <h2>HttpServer</h2>
+        </div>
+    </div>
+    <p class="heroP">Micro Http Server, <br>
+        powered by Http-Parser + C.</p>
+    <div class="mountains">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+</body>
+
+<script src="script.js"></script>
+
 </html>
